# QtPractice

./: .gitignore  CMakeLists.txt  README.md
qrc/: resource.qrc
test/ButtonTest/: CMakeLists.txt  README.md
test/ButtonTest/include/: CustomWindow.h
test/ButtonTest/src/: ButtonTest.cpp  CustomWindow.cpp
test/WidgetTest/: CMakeLists.txt
test/WidgetTest/include/: CustomWindow.h
test/WidgetTest/src/: CustomWindow.cpp  WidgetTest.cpp
